test/Harper/Tests/Good/LoopControlFlow_Break.har
main :: sideeffect -> ();
main = {
  var (i :: Integer) = 0;
  var (j :: Integer);
  var (sum :: Integer) = 0;
  while i < 10 {
    j := i;
    while j < 10 {
      if j == 5 {
        break;
      }
      sum += j;
      j += 1;
    }
    i += 1;
  }
  
  eval printLn sum ();
};