test/Harper/Tests/Bad/CallingCurrentOnARefIteratorBeforeNext.har
iterate :: impure -> RefIterator Integer sideeffect;
iterate = {
    var (i :: Integer) = 0;
    while true {
        yield i;
        eval printLn i ();
        i += 1;
    }
};

main :: sideeffect -> Integer;
main = (iterate ()).current ();